# prismlib

./: .gitignore  PrismAPI.md  README.md  info.md  infoMicro.md  pyproject.toml  requirements.txt  whitepaper.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benchmark/: Dockerfile  Dockerfile.wrapper  requirements.txt
benchmark/api/: bench_corpus.py  bench_server.py  run_prismapi_benchmark.py  run_real_benchmark.py
benchmark/api/results/: prismapi_128dim.json  prismapi_64dim.json  prismapi_results.json  real_benchmark_results.json
benchmark/app/: config.py  main.py  telemetry.py
benchmark/azure/: deploy.sh  infra.bicep  params.json
benchmark/cluster/: Dockerfile  cluster_benchmark_results.json  logs_blue.txt  logs_blue_err.txt  logs_green.txt  logs_green_err.txt  logs_orange.txt  logs_orange_err.txt  node_app.py  requirements.txt  run_cluster_benchmark.py
benchmark/load/: driver_locustfile.py  locustfile.py  run_benchmark.py  run_driver_benchmark.py  seed_data.py
benchmark/results/: driver_baseline_20260624_135133_stats.csv  driver_benchmark_20260624_135338.json  driver_local_20260624_135133_stats.csv  prism_light_20260624_125452_report.json  prism_light_20260624_125452_stats.csv  prism_light_20260624_125452_stats_history.csv  prism_mixed_20260624_125615_report.json  prism_mixed_20260624_125615_stats.csv  prism_mixed_20260624_125615_stats_history.csv
benchmark/wrapper_sim/: main.py  requirements.txt
deploy/: azure_cluster_benchmark.sh  docker-compose.cluster.yml
docs/: ai-overview.md  architecture.md  llm-context.md
examples/: anthropic_basic.py  django_middleware.py  multi_tenant.py  openai_basic.py  prismapi_quickstart.py
prism/: __init__.py
prism/api/: README.md  __init__.py  consumer.py  mcp.py  multi_provider.py  provider.py  schema.py
prism/api/integrations/: __init__.py  langgraph.py
prism/bridge/: __init__.py  vector.py
prism/cache/: __init__.py  cache.py  embedder.py  metrics.py  store.py
prism/cluster/: __init__.py  alerts.py  cache.py  node.py
prism/ffi/: CMakeLists.txt  CMakePresets.json  __init__.py  bindings.py  csharp_bindings.cs  go_bindings.go  java_bindings.java  php_bindings.php  prism_driver.h
prism/lib/: __init__.py  fabric.py  lang.py  resonance.py
prism/wrapper/: __init__.py  config.py  daemon.py  interceptor.py  publisher.py
proto/: chorus.proto
tests/: test_bridge_vector.py  test_cache.py  test_cache_invalidation.py  test_fabric.py  test_ffi.py  test_lang.py  test_resonance.py  test_wrapper.py
tests/api/: conftest.py  test_consumer.py  test_langgraph.py  test_multi_provider.py  test_provider.py  test_schema.py
