[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismlib"
version = "0.2.0"
description = "Tensor-native semantic cache and distributed data plane — PrismLib"
authors = [{ name = "InsightIts", email = "insightits.info@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
keywords = ["llm", "cache", "semantic", "vector", "tensor", "grpc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core — always installed
dependencies = [
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "onnx>=1.15.0",
]

[project.optional-dependencies]

# PrismCache — semantic LLM cache (Phase 1)
cache = [
    "sentence-transformers>=2.7.0",
]
cache-openai = [
    "openai>=1.30.0",
]
cache-anthropic = [
    "anthropic>=0.28.0",
    "voyageai>=0.2.0",
]
cache-ollama = [
    "httpx>=0.27.0",
]

# CHORUS Fabric — gRPC transport layer
fabric = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
]

# Server Wrapper — DB-node daemon (Phase 2)
wrapper = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
]

# Vector store bridge (RAGPatch)
vector = [
    "asyncpg>=0.29.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
]

# Everything
all = [
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "voyageai>=0.2.0",
    "httpx>=0.27.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
prism-wrapper = "prism.wrapper.main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]
ignore = ["B008"]
